<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="200dp"
    android:layout_gravity="bottom"
    android:background="@drawable/pop_x_app_corner"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvOpen"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/common_selector"
        android:gravity="center"
        android:padding="@dimen/default_padding"
        android:text="@string/open_x_app"
        android:textColor="@color/text_black2"
        android:textSize="@dimen/text_normal" />

    <View style="@style/divider" />

    <TextView
        android:id="@+id/tvRefresh"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/common_selector"
        android:gravity="center"
        android:padding="@dimen/default_padding"
        android:text="@string/refresh_x_app"
        android:textColor="@color/text_black2"
        android:textSize="@dimen/text_normal" />

    <View style="@style/divider" />

    <TextView
        android:id="@+id/tvShortcut"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/common_selector"
        android:gravity="center"
        android:padding="@dimen/default_padding"
        android:text="@string/shortcut_x_app"
        android:textColor="@color/text_black2"
        android:textSize="@dimen/text_normal" />

    <View style="@style/divider" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/common_selector"
        android:gravity="center"
        android:padding="@dimen/default_padding"
        android:visibility="gone"
        android:text="@string/info_x_app"
        android:textColor="@color/text_black2"
        android:textSize="@dimen/text_normal" />


    <!--    <View style="@style/divider" />-->

    <TextView
        android:id="@+id/tvConpatible"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/common_selector"
        android:gravity="center"
        android:padding="@dimen/default_padding"
        android:text="@string/compatible_config_x_app"
        android:textColor="@color/text_black2"
        android:textSize="@dimen/text_normal" />

</LinearLayout>